# ovum

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Caddyfile  Caddyfile.production  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml
backend/: .env.example  Dockerfile  Dockerfile.local  configurations_mypy_plugin.py  manage.py  mypy.ini  pyproject.toml
backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/backend/management/commands/: clear_cache.py  ovum_rundramatiq.py
backend/backend/settings/: __init__.py  base.py  local.py  production.py
backend/backend/tests/: conftest.py  test_smoke.py
frontend/: .prettierrc  Dockerfile  Dockerfile.local  eslint.config.mjs  orval.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/api/: allauth.ts  backend.ts
frontend/api/mutator/: allauth-transformer.ts  custom-instance.ts
frontend/app/: globals.css  layout.tsx  page.test.tsx  page.tsx  providers.tsx
frontend/e2e/: smoke.spec.ts
