[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [{ name = "Aria Taylor", email = "ari@aricodes.net" }]
license = "MIT"
requires-python = ">=3.12,<4"
dependencies = [
  "django (>=6.0.4,<7.0.0)",
  "django-stubs[compatible-mypy] (>=6.0.2,<7.0.0)",
  "djangorestframework (>=3.17.1,<4.0.0)",
  "psycopg (>=3.3.3,<4.0.0)",
  "django-configurations (>=2.5.1,<3.0.0)",
  "dj-database-url (>=3.1.2,<4.0.0)",
  "drf-spectacular (>=0.29.0,<0.30.0)",
  "drf-standardized-errors (>=0.16.0,<0.17.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
  "djangorestframework-stubs[compatible-mypy] (>=3.16.9,<4.0.0)",
  "ruff (>=0.15.10,<0.16.0)",
  "pytest (>=9.0.3,<10.0.0)",
  "pytest-django (>=4.12.0,<5.0.0)",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings"
DJANGO_CONFIGURATION = "Local"

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
  "DJ", # flake8-django
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
