[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [{ name = "Aria Taylor", email = "ari@aricodes.net" }]
license = "MIT"
requires-python = ">=3.14,<4"
dependencies = [
  "django (>=6.0.5,<7.0.0)",
  "django-stubs[compatible-mypy] (>=6.0.3,<7.0.0)",
  "djangorestframework (>=3.17.1,<4.0.0)",
  "psycopg (>=3.3.4,<4.0.0)",
  "django-configurations (>=2.5.1,<3.0.0)",
  "dj-database-url (>=3.1.2,<4.0.0)",
  "drf-spectacular (>=0.29.0,<0.30.0)",
  "drf-standardized-errors (>=0.16.0,<0.17.0)",
  "django-allauth (>=65.16.1,<66.0.0)",
  "djangorestframework-camel-case (>=1.4.2,<2.0.0)",
  "django-valkey (>=0.4.0,<0.5.0)",
  "django-dramatiq (>=0.15.0,<0.16.0)",
  "dramatiq[redis] (>=2.1.0,<3.0.0)",
  "gunicorn (>=26.0.0,<27.0.0)",
]


[build-system]
requires = ["poetry-core>=2.4.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
  "djangorestframework-stubs[compatible-mypy] (>=3.16.9,<4.0.0)",
  "ruff (>=0.15.16,<0.16.0)",
  "pytest (>=9.0.3,<10.0.0)",
  "pytest-django (>=4.12.0,<5.0.0)",
  "pytest-cov (>=7.1.0,<8.0.0)",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings"
DJANGO_CONFIGURATION = "Local"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--reuse-db --strict-markers --strict-config --tb=short --cov=. --cov-report=term-missing:skip-covered"
testpaths = ["backend"]

[tool.ruff]
target-version = "py313"
line-length = 110
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "DJ",  # flake8-django
  "S",   # flake8-bandit (Security)
  "C4",  # flake8-comprehensions
  "T20", # flake8-print
  "N",   # pep8-naming
  "RUF", # Ruff-specific rules
  "PL",  # Pylint
]
ignore = [
  "PLR0913", # Too many arguments to function call
  "S101",    # Use of assert detected (useful for pytest)
  "RUF012",  # Mutable class attributes (annoying with django-configurations)
  "S105",    # Hardcoded password (triggered by SECRET_KEY)
]

[tool.ruff.lint.per-file-ignores]
"manage.py" = ["PLC0415"]
"backend/settings/__init__.py" = ["PLC0415"]
"backend/settings/*.py" = ["S105", "N802"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
section-order = ["future", "standard-library", "third-party", "django", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
django = ["django", "rest_framework", "configurations"]

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
no_implicit_optional = true
plugins = ["./configurations_mypy_plugin.py", "mypy_drf_plugin.main"]
exclude = [
    '^manage\.py$',
    '^gunicorn\.conf\.py$',
    '.*/migrations/.*',
]

[[tool.mypy.overrides]]
module = ["environ.*", "configurations.*", "rest_framework_camel_case.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "backend.settings"
